Feat: Tarea realizada

--- a/práctica_1/estructura.html
+++ b/práctica_1/estructura.html
@@ -11,6 +11,19 @@
         <h2>header</h2>
     </header>
 
+    <section class="main">
+        <aside class="left">
+            left
+        </aside>
+
+        <main>
+            Main container
+        </main>
+
+        <aside class="right">
+            right
+        </aside>
+    </section>
 
 
     <footer>
