Fix: Práctica corregida

--- a/Perú/index.html
+++ b/Perú/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section class="bandera">
-        <article></article>
-        
-    <section class="medio">
-        <article></article>
+    <section class="bandera peru">
+        <section class="rojo"></section>
+        <section class="blanco"><img src="../assets/descarga (2).png" alt=""></section>
+        <section class="rojo"></section>
     </section>
 
-    <section class="derecho">
-        <article></article>
+    <section class="bandera chile">
+        <section class="blanco">
+        <section class="azul"></section>
+        </section>
+        <section class="rojo"></section>
     </section>
-
+    
 </body>
 </html>
